chore: atualizar .gitignore para evitar commit de dados e ambientes

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ data/processed/
 *.joblib
 *.pkl
 
-# notebooks
+# notebooks (opcional: se quiser tracking, remova esta linha)
 notebooks/*.ipynb
 *.ipynb_checkpoints
 
