--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ data/processed/
 *.joblib
 *.pkl
 
-# notebooks (opcional: se quiser tracking, remova esta linha)
+# notebooks (opcional)
 notebooks/*.ipynb
 *.ipynb_checkpoints
 
